@@ -1,5 +1,5 @@
 print.coxph <-
- function(x, digits=max(options()$digits - 4, 3), ...)
+ function(x, digits=max(3L, getOption("digits") - 3L), signif.stars=FALSE, ...)
     {
     if (!is.null(cl<- x$call)) {
 	cat("Call:\n")
@@ -20,28 +20,28 @@ print.coxph <-
 
     if (is.null(x$naive.var)) {
 	tmp <- cbind(coef, exp(coef), se, coef/se,
-#	       signif(1 - pchisq((coef/ se)^2, 1), digits -1))
-               1- pchisq((coef/se)^2, 1))
+               pchisq((coef/se)^2, 1, lower.tail=FALSE))
 	dimnames(tmp) <- list(names(coef), c("coef", "exp(coef)",
 	    "se(coef)", "z", "p"))
 	}
     else {
 	nse <- sqrt(diag(x$naive.var))
 	tmp <- cbind(coef, exp(coef), nse, se, coef/se,
-#	       signif(1 - pchisq((coef/se)^2, 1), digits -1))
-	       1 - pchisq((coef/se)^2, 1))
+	       pchisq((coef/se)^2, 1, lower.tail=FALSE))
 	dimnames(tmp) <- list(names(coef), c("coef", "exp(coef)",
 	    "se(coef)", "robust se", "z", "p"))
 	}
 
-    printCoefmat(tmp, signif.stars=FALSE, P.values=TRUE, has.Pvalue=TRUE)
+    printCoefmat(tmp, P.values=TRUE, has.Pvalue=TRUE,
+                 signif.stars = signif.stars, ...)
 
     logtest <- -2 * (x$loglik[1] - x$loglik[2])
     if (is.null(x$df)) df <- sum(!is.na(coef))
     else  df <- round(sum(x$df),2)
     cat("\n")
     cat("Likelihood ratio test=", format(round(logtest, 2)), "  on ",
-	df, " df,", " p=", format(1 - pchisq(logtest, df)), "\n",  sep="")
+	df, " df,", " p=", format(pchisq(logtest, df, lower.tail=TRUE)), 
+        "\n",  sep="")
     omit <- x$na.action
     cat("n=", x$n)
     if (!is.null(x$nevent)) cat(", number of events=", x$nevent, "\n")
