@@ -63,7 +63,7 @@ print.survreg.penal <-  function(x, terms=FALSE, maxlabel=25,
 	    pname1 <- c(pname1, names(pterms)[i])
 	    temp <- coxph.wtest(x$var[kk,kk], coef[kk])$test
 	    print1 <- rbind(print1, c(NA, NA, NA,
-				      temp, x$df[i], 1-pchisq(temp, 1)))
+		  temp, x$df[i], pchisq(temp, 1, lower.tail=FALSE)))
 	    }
 	else {
 	    pname1 <- c(pname1, names(coef)[kk])
@@ -71,7 +71,7 @@ print.survreg.penal <-  function(x, terms=FALSE, maxlabel=25,
 	    temp <- coef[kk]^2/ tempe
 	    print1 <- rbind(print1, cbind(coef[kk], sqrt(tempe),
 				      sqrt((diag(x$var2))[kk]), 
-				      temp, 1, 1-pchisq(temp, 1)))
+				  temp, 1, pchisq(temp, 1, lower.tail=FALSE)))
 	    }
 	}
 
@@ -111,7 +111,7 @@ print.survreg.penal <-  function(x, terms=FALSE, maxlabel=25,
 #    cat("Loglik (initial,final) = ", format(round(x$loglik,2)),
 #	"  Penalty = ", format(x$penalty), "\n")
     cat("Likelihood ratio test=", format(round(logtest, 2)), "  on ",
-	round(df,1), " df,", " p=", format(1 - pchisq(logtest, df)),  sep="")
+	round(df,1), " df,", " p=", format(pchisq(logtest, df, lower.tail=FALSE)),  sep="")
 
     n <- length(x$linear.predictors)
     omit <- x$na.action
